# synapse

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  Tiltfile  package.json  renovate.json  synapse.toml
.changeset/: README.md  config.json
.github/actions/install-rust/: action.yml
.github/workflows/: release.yml  sync.yml  test.yml
config/: synapse.prod.toml
crates/integration-tests/src/: lib.rs
crates/stt/src/: error.rs  server.rs
crates/stt/src/provider/: deepgram.rs
crates/synapse-auth/src/: lib.rs  resolver.rs  usage.rs  vault.rs
crates/synapse-billing/src/: circuit.rs  client.rs  recorder.rs
crates/synapse-cache/src/: lib.rs
crates/synapse-client/src/: agent_provider.rs  client.rs  embedded.rs
crates/synapse-config/src/: billing.rs  llm.rs
crates/synapse-embeddings/src/: error.rs  server.rs
crates/synapse-imagegen/src/: error.rs  server.rs
crates/synapse-llm/src/: discovery.rs  error.rs  handler.rs  health.rs  routing.rs  state.rs
crates/synapse-llm/src/convert/: anthropic.rs  (+2 more)
crates/synapse-mcp/src/: cache.rs  index.rs  router.rs
crates/synapse-routing/ml/: README.md  clickhouse_schema.sql  requirements.txt  train.py
crates/synapse-routing/src/: analysis.rs  feedback.rs  lib.rs  scoring.rs
crates/synapse-server/src/: auth.rs  billing_identity.rs  csrf.rs  entitlement.rs  entitlement_cache.rs  guardrails.rs  invalidate.rs  lib.rs  rate_limit.rs  webhook.rs
crates/synapse-telemetry/src/: lib.rs
crates/tts/src/: error.rs  server.rs
models/: README.md
synapse/: Cargo.toml
synapse/src/: main.rs
(+12 files in other folders)
