[package]
name = "synapse"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "../README.md"
keywords.workspace = true
categories.workspace = true
default-run = "synapse"

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
clap = { workspace = true, features = ["derive", "env"] }
dotenvy.workspace = true
synapse-config.workspace = true
synapse-server.workspace = true
synapse-telemetry.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "tokio-macros"] }
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy", "run-cargo-test"] }
